all-resources/old/MsSQL/pg-test/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql
  labels:
    app: mssql
spec:
  ports:
  - port: 1433
    name: mssql
  - port: 5022
    name: mirror
  # clusterIP: None
  selector:
    app: mssql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql
spec:
  serviceName: mssql
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: tasdidur/mssql:tds_fdw #mcr.microsoft.com/mssql/server:2019-latest #jrei/systemd-ubuntu:20.04 #ubuntu:20.04 #
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1433
          name: mssql
        - containerPort: 5022
          name: mirror
        securityContext:
          privileged: false
          runAsGroup: 0
          runAsUser: 0 
  #       volumeMounts:
  #       - name: www
  #         mountPath: /usr/share/nginx/html
  # volumeClaimTemplates:
  # - metadata:
  #     name: www
  #   spec:
  #     accessModes: [ "ReadWriteOnce" ]
  #     resources:
  #       requests:
  #         storage: 1Gi
